src/styles/pages/dashboard.less
/* ... */
.ant-divider-horizontal {
  margin: 12px 0;
}

.@{class-prefix}-visit-col {
  order: 1;

  @media screen and (max-width: @screen-lg-max) {
    order: 2;
    margin-top: 20px;
  }
}

.@{class-prefix}-audi-col {
  order: 2;

  @media screen and (max-width: @screen-lg-max) {
    order: 1;
  }

  @media screen and (max-width: @screen-xs-max) {
    margin-top: 20px;
  }
}

.@{class-prefix}-rechart {
  position: relative;

  &-prod {
    position: absolute;
    left: 30px;
    top: 0;
    z-index: 1;

    @media (max-width: (@screen-xl-min + 166px)) {
      left: 20px;
    }
  }
}

.@{class-prefix}-pink-purple-gradient {
  .horizontal-gradient(#564093, #d2449d);
}

.@{class-prefix}-pink-purple-gradient-reverse {
  .horizontal-gradient(#872776, #352883);
}

.@{class-prefix}-blue-cyan-gradient {
  .corner-left-gradient(#45d1e6, #4363c6);
}

.@{class-prefix}-cyan-green-gradient {
  .corner-left-gradient(#40CAC1, #219DD0);
}
.@{class-prefix}-pink-purple-corner-gradient {
  .corner-left-gradient(#d2449d, #564093);
}
.@{class-prefix}-pink-orange-corner-gradient {
  .corner-left-gradient(#fc6bab, #fd826b);
}

.@{class-prefix}-app-thumb {
  display: inline-block;
}

.@{class-prefix}-card-cover-black {
  & .ant-card-head {
    background-color: @black-color;
    color: @white-color;
    padding-top: 20px;

    & h1 {
      color: @white-color;
    }
  }

  & .ant-card-head-title {
    .flex-display(flex, column, nowrap);
  }

  & .ant-card-body {
    padding: 1rem;
  }
}

.@{class-prefix}-dot-arrow-hover {
  position: relative;
  overflow: hidden;

  &:hover {
    & .@{class-prefix}-hover-arrow {
      left: -15px;
    }
  }
}

.@{class-prefix}-dot-arrow {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 2;
  padding-right: 10px;
  cursor: pointer;
  .flex-display(flex, column, nowrap);
  .justify-content(center);

  .@{class-prefix}-dot {
    cursor: pointer;
    .transition(all 0.3s ease-out);
    .flex-display(flex, column, nowrap);
    .justify-content(center);
  }
}

.@{class-prefix}-hover-arrow {
  .transition(all 0.3s ease-out);
  cursor: pointer;
  .border-radius(@border-radius-circle 0 0 @border-radius-circle);
  .flex-display(flex, row, wrap);
  .justify-content(flex-start);
  .align-items(center);
  width: (@size-100 + 7);
  height: (@size-100 + 7);
  position: absolute;
  left: 15px;
  padding: 10px;
  font-size: (@font-size-lg + 4);

  & .icon {
    display: flex;
  }
}

.@{class-prefix}-actchart {
  margin-bottom: -4px;
}

.@{class-prefix}-user-wid {
  width: @size-80;
  position: relative;

  & img {
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
  }

  &-row {
    .flex-display(flex, row, nowrap);
  }

  &-body {
    .flex-only(1);
  }
}

.@{class-prefix}-build-box-lay {

  .boxed-layout &,
  .framed-layout & {
    padding: 0 10px !important;

    & img {
      width: @size-50;
    }
  }

  @media (max-width: (@screen-xl-min + 166px)) {
    padding: 0 10px !important;

    & img {
      width: @size-50;
    }
  }

  &-content {
    max-width: calc(100% ~"-" 70px);
  }
}

.@{class-prefix}-chart-title {
  font-size: @font-size-base;

  @media (max-width: (@screen-xl-min + 166px)) {
    font-size: (@font-size-base - 2);
  }
}

.@{class-prefix}-widget-bg {
  .horizontal-gradient(#4c429a, #9956ce);
  color: @white-color;
  position: relative;

  & h1 {
    color: @white-color;
  }
}

.@{class-prefix}-widget-badge {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
  background-color: darken(@pink-4, 5%);
  color: @white-color;
  padding: 5px 12px;
  .border-radius(0 @border-radius-lg 0 @border-radius-lg);
}

.@{class-prefix}-fnd-content {
  padding-right: @size-40;

  @media (max-width: (@screen-xl-min + 166px)) {
    padding-right: 0;
  }

  @media screen and (max-width: @screen-xs-max) {
    margin-top: 20px;
  }
}

.@{class-prefix}-fnd-gallery-list {
  list-style: none;
  padding-left: 0;
  margin: 0 -6px;
  .flex-display(flex, row, nowrap);

  & li {
    padding: 0 6px;

    &>img {
      width: (@size-60 + 5);

      @media (max-width: (@screen-xl-min + 166px)) {
        width: @size-50;
      }
    }
  }
}

.@{class-prefix}-fnd-title {
  font-size: 2*@font-size-base - 4px;
  margin-bottom: 15px;

  @media (max-width: (@screen-xl-min + 166px)) {
    font-size: @font-size-lg + 4px;
    margin-bottom: 5px;
  }
}

.@{class-prefix}-chart-up {
  color: @green-color;

  .@{class-prefix}-bg-geekblue & {
    color: @white-color;
  }
}

.@{class-prefix}-chart-down {
  color: @red-6;

  & .icon {
    .rotate(180deg);
    display: inline-block;
  }
}

.@{class-prefix}-barchart {
  margin-top: -15px;

  @media screen and (max-width: @screen-lg-max) {
    margin-top: 0;
  }
}

.@{class-prefix}-customers {
  margin-top: -7px;
  margin-bottom: -7px;

  @media (max-width: (@screen-xl-min + 166px)) {
    margin-top: -2px;
    margin-bottom: -2px;

    & .gx-size-60 {
      height: @size-50  !important;
      width: @size-50  !important;
      line-height: @size-50  !important;
    }
  }

  @media (max-width: @screen-xs-max) {
    margin-top: 0;
    margin-bottom: 0;
  }
}
/* ... */

